# git-fame

./: .casperdcl.gpg.enc  .coveragerc  .dockerignore  .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  .snapcraft.yml  .travis.yml  .zenodo.json  Dockerfile  LICENCE  MANIFEST.in  Makefile  README.rst  _utils.py  git-fame.1  git-fame.1.md  git-fame_completion.bash  gitfame.py  migrate.sh  pyproject.toml  setup.cfg  setup.py  snapcraft.yaml  tox.ini
.github/: FUNDING.yml
.github/workflows/: comment-bot.yml  test.yml
.meta/: .git-fame.1.md  .snapcraft.yml
gitfame/: __init__.py  __main__.py  _gitfame.py  _utils.py  _version.py  git-fame.1
gitfame/tests/: test_gitfame.py  test_utils.py  tests_gitfame.py  tests_utils.py
tests/: tests_gitfame.py  tests_utils.py
