[build-system]
requires = ["setuptools>=42", "wheel", "setuptools_scm[toml]>=3.4"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
version_file = "gitfame/_dist_ver.py"
version_file_template = "__version__ = '{version}'\n"

[tool.setuptools.packages.find]
exclude = ["tests"]

[project.urls]
repository = "https://github.com/casperdcl/git-fame"
changelog = "https://github.com/casperdcl/git-fame/releases"

[project]
name = "git-fame"
dynamic = ["version"]
authors = [{name = "Casper da Costa-Luis", email = "casper.dcl@physics.org"}]
description = "Pretty-print `git` repository collaborators sorted by contributions"
readme = "README.rst"
requires-python = ">=3.8"
keywords = ["git", "blame", "git-blame", "git-log", "code-analysis", "cost", "loc", "author", "commit", "shortlog", "ls-files"]
license = {text = "MPL-2.0"}
# Trove classifiers (https://pypi.org/pypi?%3Aaction=list_classifiers)
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Environment :: MacOS X",
    "Environment :: Other Environment",
    "Environment :: Win32 (MS Windows)",
    "Environment :: X11 Applications",
    "Framework :: IPython",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Other Audience",
    "Intended Audience :: System Administrators",
    "Operating System :: MacOS",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft",
    "Operating System :: Microsoft :: MS-DOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Operating System :: POSIX :: BSD",
    "Operating System :: POSIX :: BSD :: FreeBSD",
    "Operating System :: POSIX :: Linux",
    "Operating System :: POSIX :: SunOS/Solaris",
    "Operating System :: Unix",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: Implementation",
    "Programming Language :: Python :: Implementation :: IronPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Programming Language :: Unix Shell",
    "Topic :: Desktop Environment",
    "Topic :: Education :: Computer Aided Instruction (CAI)",
    "Topic :: Education :: Testing",
    "Topic :: Office/Business",
    "Topic :: Other/Nonlisted Topic",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Pre-processors",
    "Topic :: Software Development :: User Interfaces",
    "Topic :: System :: Installation/Setup",
    "Topic :: System :: Logging",
    "Topic :: System :: Monitoring",
    "Topic :: System :: Shells",
    "Topic :: Terminals",
    "Topic :: Utilities"]
dependencies = [
    "argopt>=0.3.5",
    'importlib_resources; python_version < "3.9"',
    "tabulate",
    "tqdm>=4.44.0"]

[project.optional-dependencies]
dev = ["pytest>=6", "pytest-cov", "pytest-timeout", "pytest-xdist"]
yaml = ["pyyaml"]
tabulate = []
full = ["pyyaml"]

[project.scripts]
git-fame = "gitfame:main"

[tool.flake8]
max_line_length = 99
extend_ignore = ["E261", "P103"]
exclude = [".git", "__pycache__", "build", "dist", ".eggs", ".tox"]

[tool.yapf]
spaces_before_comment = [15, 20]
arithmetic_precedence_indication = true
allow_split_before_dict_value = false
coalesce_brackets = true
column_limit = 99
each_dict_entry_on_separate_line = false
space_between_ending_comma_and_closing_bracket = false
split_before_named_assigns = false
split_before_closing_bracket = false
blank_line_before_nested_class_or_def = false

[tool.isort]
line_length = 99
known_first_party = ["gitfame", "tests"]

[tool.pytest.ini_options]
timeout = 30
log_level = "INFO"
python_files = ["tests_*.py"]
testpaths = ["tests"]
addopts = "-v --tb=short -rxs --durations=0 --durations-min=0.1"
filterwarnings = ["error", "ignore:co_lnotab:DeprecationWarning"]

[tool.coverage.run]
branch = true
omit = ["tests/*"]
relative_files = true
[tool.coverage.report]
show_missing = true
