[bdist_wheel]
universal = 1

[flake8]
ignore = E111,E114
max_line_length = 80
exclude = .eggs,.tox,dist,build,dist,.git,__pycache__

[metadata]
name = git-fame
url = https://github.com/casperdcl/git-fame
project_urls =
    Changelog = https://github.com/casperdcl/git-fame/releases
    Documentation = https://github.com/casperdcl/git-fame/#git-fame
license_file = LICENCE
description = Pretty-print `git` repository collaborators sorted by contributions
long_description = file: README.rst
long_description_content_type = text/x-rst
keywords = git, blame, git-blame, git-log, code-analysis, cost, loc, author, commit, shortlog, ls-files
platforms = any
provides = gitfame
# Trove classifiers (https://pypi.org/pypi?%3Aaction=list_classifiers)
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Environment :: MacOS X
    Environment :: Other Environment
    Environment :: Win32 (MS Windows)
    Environment :: X11 Applications
    Framework :: IPython
    Intended Audience :: Developers
    Intended Audience :: Education
    Intended Audience :: End Users/Desktop
    Intended Audience :: Other Audience
    Intended Audience :: System Administrators
    License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)
    Operating System :: MacOS
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft
    Operating System :: Microsoft :: MS-DOS
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Operating System :: POSIX :: BSD
    Operating System :: POSIX :: BSD :: FreeBSD
    Operating System :: POSIX :: Linux
    Operating System :: POSIX :: SunOS/Solaris
    Operating System :: Unix
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation
    Programming Language :: Python :: Implementation :: IronPython
    Programming Language :: Python :: Implementation :: PyPy
    Programming Language :: Unix Shell
    Topic :: Desktop Environment
    Topic :: Education :: Computer Aided Instruction (CAI)
    Topic :: Education :: Testing
    Topic :: Office/Business
    Topic :: Other/Nonlisted Topic
    Topic :: Software Development :: Build Tools
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Software Development :: Pre-processors
    Topic :: Software Development :: User Interfaces
    Topic :: System :: Installation/Setup
    Topic :: System :: Logging
    Topic :: System :: Monitoring
    Topic :: System :: Shells
    Topic :: Terminals
    Topic :: Utilities

[options]
setup_requires = setuptools>=42; setuptools_scm[toml]>=3.4
install_requires = argopt>=0.3.5; tabulate; tqdm>=4.44.0
python_requires = >=2.7, !=3.0.*, !=3.1.*, !=3.2.*, !=3.3.*, !=3.4.*
tests_require = nose; flake8; coverage
include_package_data = True
packages = find:
[options.extras_require]
yaml = pyyaml
tabulate =
full = pyyaml
dev = pyyaml; py-make>=0.1.0; twine; wheel
[options.entry_points]
console_scripts =
    git-fame = gitfame:main
[options.package_data]
gitfame = git-fame.1
